Fixed minor spacing and made some improvments

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -75,7 +75,7 @@ tooltip {
 }
 
 #custom-lightdarkmode {
-    padding-right: 7px;
+    padding-right: 2px;
 }
 
 #tray {
@@ -89,8 +89,8 @@ tooltip {
 }
 
 #wireplumber, #custom-lights, #network, #custom-lightdarkmode {
-    margin-left: 6px;
-    margin-right: 6px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 #wireplumber {
@@ -107,7 +107,7 @@ tooltip {
 
 
 #network {
-    padding-right: 8px;
+    padding-right: 6px;
 }
 
 
